1998-02-23  Alex Lancaster  <alex@santafe.edu>

	* ModelSwarm.m ([ModelSwarm -build{Objects,Actions}]): Changed
	storage calls allocation to use the current Swarm (self) as the
	basis for storage allocation, rather than an explicit ([self
	-getZone]) call.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ModelSwarm.h, Bug.h: Include from objectbase/ instead of
	swarmobject/.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Don't define if defined already.
